TestSuite/errors/err0315.pas
type
  TClass = class
  end;

procedure operator+=(a, b, c, d: TClass); extensionmethod := exit;

begin
end.